feat:  스포카 한 산스 네오 폰트 적용

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
-body { margin : 0 }
-div { box-sizing : border-box }
+body {
+  margin: 0;
+}
+div {
+  box-sizing: border-box;
+}
+* {
+  font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+}
